Se cambio el orden de los metodos, y se dividio en, metodos de obtencion de datos, de persistencia y validacion de campos